cmake_minimum_required(VERSION 3.16)
project(ConcuBread)

set(CMAKE_CXX_STANDARD 14)

add_executable(ConcuBread src/main.cpp src/utils/ProcessManager.cpp src/utils/ProcessManager.h src/fifos/Fifo.cpp src/fifos/Fifo.h src/fifos/FifoEscritura.cpp src/fifos/FifoLectura.cpp src/fifos/FifoLectura.h src/signals/EventHandler.h src/signals/SIGINT_Handler.h src/signals/SignalHandler.cpp src/signals/SignalHandler.h src/Procesos/Actores/Recepcionista.cpp src/Procesos/Actores/Recepcionista.h src/Procesos/Actores/Cocinero.cpp src/Procesos/Actores/Cocinero.h src/Procesos/Actores/Panadero.cpp src/Procesos/Actores/Panadero.h src/Procesos/Actores/Pizzero.cpp src/Procesos/Actores/Pizzero.h src/utils/consts.h src/Procesos/Actores/Actor.cpp src/Procesos/Actores/Actor.h src/Procesos/Actores/EspecialistaMasaMadre.cpp src/Procesos/Actores/EspecialistaMasaMadre.h src/Procesos/DebugPrinter.cpp src/Procesos/DebugPrinter.h src/Procesos/Proceso.cpp src/Procesos/Proceso.h src/Procesos/Padre.cpp src/Procesos/Padre.h)